# docs/openapi.json
@@ -442,6 +442,8 @@
       "ConfirmStudyCreate": {
         "properties": {
           "confirm_name": {
+            "maxLength": 80,
+            "minLength": 1,
             "title": "Confirm Name",
             "type": "string"
           }
@@ -1210,10 +1212,14 @@
       "StudyTrackingCreate": {
         "properties": {
           "activity": {
+            "maxLength": 500,
+            "minLength": 1,
             "title": "Activity",
             "type": "string"
           },
           "hours_spent": {
+            "exclusiveMinimum": 0.0,
+            "maximum": 24.0,
             "title": "Hours Spent",
             "type": "number"
           }
@@ -1979,11 +1985,18 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/LogoutRequest"
+                "anyOf": [
+                  {
+                    "$ref": "#/components/schemas/LogoutRequest"
+                  },
+                  {
+                    "type": "null"
+                  }
+                ],
+                "title": "Data"
               }
             }
-          },
-          "required": true
+          }
         },
         "responses": {
           "200": {
@@ -3456,11 +3469,18 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ReminderSkipRequest"
+                "anyOf": [
+                  {
+                    "$ref": "#/components/schemas/ReminderSkipRequest"
+                  },
+                  {
+                    "type": "null"
+                  }
+                ],
+                "title": "Data"
               }
             }
-          },
-          "required": true
+          }
         },
         "responses": {
           "200": {
